--- a/D2DCommon/D2DCommon.vcxproj.filters
+++ b/D2DCommon/D2DCommon.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="SingletonBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TMHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SimpleMathHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TMHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
