--- a/GameFramework/GameFramework.vcxproj
+++ b/GameFramework/GameFramework.vcxproj
@@ -102,7 +102,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)D2DCommon; $(SolutionDir)D2DRenderer; $(SolutionDir)ImGUIDX11;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)D2DCommon; $(SolutionDir)D2DRenderer; $(SolutionDir)ImGUIDX11; $(SolutionDir)Event;</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -125,29 +125,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Component.h" />
-    <ClInclude Include="Event.h" />
-    <ClInclude Include="EventDispatcher.h" />
-    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Homework.txt" />
-    <ClInclude Include="IEventListener.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="MainApp.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Scene.h" />
-    <ClInclude Include="TestListener.h" />
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Component.cpp" />
-    <ClCompile Include="EventDispatcher.cpp" />
-    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainApp.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="TestListener.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +146,9 @@
     </ProjectReference>
     <ProjectReference Include="..\D2DRenderer\D2DRenderer.vcxproj">
       <Project>{9ff2b6a5-f095-40ab-9553-0fa7ee84593f}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Event\Event.vcxproj">
+      <Project>{f19d0681-a873-4297-bb00-e750294995e9}</Project>
     </ProjectReference>
     <ProjectReference Include="..\ImGUIDX11\ImGUIDX11.vcxproj">
       <Project>{dd6614b4-19c1-4673-9445-f0305a3e044c}</Project>
