--- a/GameObjcet/GameObjcet.vcxproj.filters
+++ b/GameObjcet/GameObjcet.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="GameObject.h">
       <Filter>Object\Header</Filter>
     </ClInclude>
+    <ClInclude Include="RigidbodyComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationController.cpp">
@@ -103,6 +106,12 @@
     </ClCompile>
     <ClCompile Include="CameraObject.cpp">
       <Filter>Object\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="SpriteRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RigidbodyComponent.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
