--- a/GameFramework/GameFramework.vcxproj
+++ b/GameFramework/GameFramework.vcxproj
@@ -102,7 +102,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)D2DCommon; $(SolutionDir)D2DRenderer; $(SolutionDir)ImGUIDX11; $(SolutionDir)Event;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)D2DCommon; $(SolutionDir)D2DRenderer; $(SolutionDir)ImGUIDX11; $(SolutionDir)Event; $(SolutionDir)ResourceManager;</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -152,6 +152,9 @@
     </ProjectReference>
     <ProjectReference Include="..\ImGUIDX11\ImGUIDX11.vcxproj">
       <Project>{dd6614b4-19c1-4673-9445-f0305a3e044c}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\ResourceManager\ResourceManager.vcxproj">
+      <Project>{62ee5df8-394e-480a-855f-b41f46953a16}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
