--- a/GameObjcet/GameObjcet.vcxproj
+++ b/GameObjcet/GameObjcet.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="RigidbodyComponent.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="TransformComponent.h" />
+    <ClInclude Include="UIComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationController.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="RigidbodyComponent.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
+    <ClCompile Include="UIComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
