--- a/GameObjcet/GameObjcet.vcxproj.filters
+++ b/GameObjcet/GameObjcet.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="SpriteRenderer.h">
       <Filter>Component\Header</Filter>
     </ClInclude>
+    <ClInclude Include="UIComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationComponent.cpp">
@@ -112,6 +115,9 @@
     </ClCompile>
     <ClCompile Include="SpriteRenderer.cpp">
       <Filter>Component\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="UIComponent.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
