--- a/GameObjcet/GameObjcet.vcxproj
+++ b/GameObjcet/GameObjcet.vcxproj
@@ -140,7 +140,10 @@
     <ClInclude Include="RigidbodyComponent.h" />
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="TransformComponent.h" />
+    <ClInclude Include="UIButtonComponent.h" />
     <ClInclude Include="UIComponent.h" />
+    <ClInclude Include="UIImageComponent.h" />
+    <ClInclude Include="UITextComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationController.cpp" />
@@ -156,7 +159,10 @@
     <ClCompile Include="RigidbodyComponent.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
+    <ClCompile Include="UIButtonComponent.cpp" />
     <ClCompile Include="UIComponent.cpp" />
+    <ClCompile Include="UIImageComponent.cpp" />
+    <ClCompile Include="UITextComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
