--- a/GameObjcet/GameObjcet.vcxproj.filters
+++ b/GameObjcet/GameObjcet.vcxproj.filters
@@ -143,5 +143,8 @@
     <ClCompile Include="UITextComponent.cpp">
       <Filter>Component\Source</Filter>
     </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
